--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
         background-repeat: no-repeat;
         background-size: cover;
         font-family: sans-serif;
+        height: 100vh;
     }
 
     nav {
