--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     body {
         background-image: url(./image/dara.jpg);
         background-repeat: no-repeat;
-        background-size: contain;
+        background-size: cover;
         font-family: sans-serif;
         height: 100vh;
     }
